--- a/brendacarpinteria/Facturas.xaml
+++ b/brendacarpinteria/Facturas.xaml
@@ -99,7 +99,7 @@
         <TextBox x:Name="txtfecha" Grid.Column="1" Grid.Row="12" TextWrapping="Wrap" IsReadOnly="True" FontSize="13" FontFamily="Verdana" Margin="5,0" VerticalAlignment="Center"/>
 
         <Label Grid.Column="2" Grid.Row="12" Content="Total De Factura" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5" FontSize="13" FontFamily="Verdana"/>
-        <TextBox x:Name="txttotal" Grid.Column="3" Grid.Row="12" TextWrapping="Wrap" IsReadOnly="True" VerticalAlignment="Center" Margin="5,0"/>
+        <TextBox x:Name="txttotal" Grid.Column="3" Grid.Row="12" TextWrapping="Wrap" IsReadOnly="True" VerticalAlignment="Center" Margin="5,0" TextChanged="Txttotal_TextChanged"/>
 
         <Button Grid.Row="12" Grid.Column="5" Content="Ver Facturas" Click="Button_Click_5" Height="25" Width="80" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10,2"/>
         <!--Fila 14-->
@@ -149,6 +149,7 @@
 
 
         <Button Content="Agregar nuevo producto" Margin="10,5" Click="Button_Click" Grid.Column="5" Grid.Row="8" FontFamily="Verdana" MaxWidth="200"/>
+        <Button x:Name="factura" Grid.Row="12" Grid.Column="4" Content="imprimir fact" Height="25" Width="80" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,9.6,2"/>
 
 
 
